* (bug 21544) CodeReview commit list: keep long URLs from overflowing out of the comment column on browsers that don't wrap them (eg Chrome 8)
The cells in the comment column have a CSS max-width: 20em set which keeps the column from getting too wide if there's a commit summary with a long word or URL. Setting the overflow to hidden as well keeps these from spilling over to the next column in browsers that don't cleanly wrap them. In some situations 'auto' would be appropriate (provides a scroll bar), but here we're already truncating the message -- it's just a preview, and we want to make sure it fits in the UI.




git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@80767 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/CodeReview/codereview.css
+++ b/extensions/CodeReview/codereview.css
@@ -12,6 +12,7 @@ table.mw-codereview-meta td {
 }
 .TablePager_col_cr_message {
 	max-width: 20em;
+	overflow: hidden;
 }
 
 .TablePager_col_cr_timestamp {
